--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-animations": "^1.0.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
+    "react-router-hash-link": "^1.2.2",
     "react-scripts": "3.4.1"
   },
   "scripts": {
