--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "react": "^16.13.1",
     "react-animations": "^1.0.0",
     "react-dom": "^16.13.1",
+    "react-form": "^4.0.1",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-router-hash-link": "^1.2.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "redux-form": "^8.3.5"
   },
   "scripts": {
     "start": "react-scripts start",
